--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795688.md#1" target="_blank">爸爸是书记 10岁童散文登专业金融期刊</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/e61190ef76c6a7efb7a59382f8faaf51f2de6696-150x120.jpg" align ="left"></a>中国期刊品质屡屡引发质疑。有学者发现，前中国社会科学院金融研究所党委书记王松奇长期在自己担任主编的杂志开设专栏，让10岁儿子在上面发表散文和诗歌，甚至还有自己的书法作品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795370.md#1" target="_blank">持枪及受贿近七千万 甘肃博士副市长受审</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795370.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/niuxiangdong-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>1月15日，中共甘肃省工业和信息化厅前巡视员、中共兰州市前副市长、留美博士牛向东受贿、非法持有枪支一案开审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794424.md#1" target="_blank">空难死者父亲谴责伊朗暴政 获网上华人共鸣</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Screen-Shot-2020-01-15-at-4.38.46-pm-150x120.png" align ="left"></a>近日一名在空难中失去女儿的伊朗父亲，谴责伊朗独裁政府的视频在网上广传，引起人们共鸣，认为完美代表中国人的心声。更多网友认为中共政权比伊朗独政府更残暴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795467.md#1" target="_blank">姆钦：第二阶段贸易协议将有更多关税减免</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795467.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OC-600x400-1-150x120.jpg" align ="left"></a>美中将于周三（1月15日）上午11点30分签署第一阶段协议。美国财政部长史蒂芬·姆钦（Steven Mnuchin）当天早上表示，更多的对华关税减免将会在第二阶段贸易协议实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795445.md#1" target="_blank">美中今签署历史性协议 七大看点抢先看</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/692de107928fdd54b3d630cb0116890c-150x120.jpg" align ="left"></a>美中定于周三（1月15日）上午在白宫签署第一阶段贸易协议，暂时停止贸易战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795179.md#1" target="_blank">消息：美即将公布新规 扩大对华为出售限制</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/4e92efdea03479c071dc4f4879e3c149-150x120.jpg" align ="left"></a>两位消息人士透露，美国政府即将发布一项新规。这项新规将大幅提升限制美国向中国华为公司销售外国制造商品的范围。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 8:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795019.md#1" target="_blank">海南高院前副院长张家慧前夫被免职</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795019.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/zhang-jiahui_8-150x120.jpg" align ="left"></a>备受关注的“海南高院前副院长张家慧贪腐案”有了新进展。1月14日，其前夫、海南迪纳斯投资有限公司实际控制人刘远生被免去省政协常委职务、撤销省政协委员资格。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 7:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795003.md#1" target="_blank">美中贸易协议签署在即 中方做哪些主要让步</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/59d81ede5236e24fbcd092bf23c0d98f-150x120.jpg" align ="left"></a>美中将于当地时间周三（1月15日）在白宫签署备受全球关注的第一阶段贸易协议。美媒引述知情人士的话披露，中方在这份协议中不仅承诺大量采购美国产品，还在保护美国技术和商业机密方面做了重大让步。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 7:50 PM							</td></tr>
@@ -26,11 +31,6 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792529.md#1" target="_blank">布拉格与台北结为姊妹市打脸中共 上海跳脚</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a4d7b118bedefde70030f6ea4f0e21de-150x120.jpg" align ="left"></a>1月13日，捷克首都布拉格市与台北市签署协议，缔结为姊妹市。布拉格三个月前取消了与北京的姊妹市关系，打脸中共。14日中共上海市政府外事办公室发声明称，该市解除与捷克布拉格市友城关系并暂停一切官方往来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792084.md#1" target="_blank">美媒：不必北京同意 台湾经济可持续成长</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/2ae84f575af5f43dc192ae90087f6c9d-150x120.jpg" align ="left"></a>美国媒体报导，中华民国总统蔡英文高票连任，外界普遍解读选民排斥更紧密的两岸关系。由于台湾制造业底子雄厚，这项令北京不满的选举结果可能不会显着影响台湾经济。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 3:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11791730.md#1" target="_blank">佩洛西贺蔡英文连任 誓言美台共同捍卫人权</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11791730.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908011118162208-150x120.jpg" align ="left"></a>美国国会众议院议长佩洛西1月13日发声明祝贺台湾大选说，在双方共同捍卫人权与人类尊严之际，美国将进一步加强与台湾的友好合作关系。中华民国总统蔡英文说，台美之间已从双边的伙伴关系，升级为全球合作伙伴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790948.md#1" target="_blank">苏莱曼尼案震动中共 让领导先走成国人心声</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790948.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-600x400-1-150x120.jpg" align ="left"></a>正在密谋袭击美国领事馆及军人的伊朗二号实权人物苏莱曼尼，被美军无人机定点击毙后，不少中国网民欢呼美方“让领导先走”的斩首行动，并希望美国应让更多专制国家的“一号二号‘领导人先走’，造福人类”。面对如潮水般的民意，中共如何因应？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11791616.md#1" target="_blank">美中谈判锋回路转 美方这两人起关键作用</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11791616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/a5a13bc5b6165622ddf71daec633ca53-150x120.jpg" align ="left"></a>自去年夏天到12月13日双方各自宣布达成初步协议的几个月间，美中谈判锋回路转。在这个过程中，美方谈判代表罗伯特?莱特希泽（Robert Lighthizer）以及川普（特朗普）总统女婿贾里德?库什纳（Jared Kushner）在关键时刻起到了扭转乾坤的作用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789882.md#1" target="_blank">中共官媒自曝美中签约后将出现问题</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1129182986-600x400-1-150x120.jpg" align ="left"></a>美国与中国将在1月15日签署第一阶段贸易协议。不过，经常透露贸易谈判进度的中共官媒发文，暗示当局美中签约后将出现问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 10:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791387.md#1" target="_blank">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>中国华融资产管理股份有限公司（下称华融）前党委书记、董事长赖小民落马一年多后，其贪腐细节被曝光，包括专设暗号为“超市”的房屋藏匿赃款现金2亿多元，还收受大量房产、名车等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791419.md#1" target="_blank">前白宫官员：初步协议已涉及301核心问题</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/0904f085274da48b382af40505cc971b-150x120.jpg" align ="left"></a>美中贸易代表将在周三（1月15日）签署“第一阶段”贸易协议。该协议涵盖了价值数百亿美元的农产品采购，并开始对中共长期的强迫技术转让行为进行改革。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794286.md#1" target="_blank">【翻墙必看】林郑等4港高官难逃美国制裁</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.制裁香港官员 美议员承诺向国务院提交名单
