--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -18,8 +18,9 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11757804.md#1" target="_blank">反渗透法三读 受渗透介选最重可判5年刑</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11757804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3791ade04b2c734a0f348ad3b42ccaac-150x120.jpg" align ="left"></a>为防堵中共对台渗透、企图影响台湾选举结果，立法院会31日三读通过《反渗透法》，明定任何人不得接受渗透来源指示、委托或资助，捐赠政治献金、违法从事竞选活动，也不得就涉国安、国防、外交、两岸事务进行游说。违者最重处5年徒刑，得并科新台币1千万元以下罚金。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756334.md#1" target="_blank">为救女扮圣诞老人北京摆摊 父遭城管罚款</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756334.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fd2ccaaf88e833ea8edac61b5c598a22-150x120.jpg" align ="left"></a>32岁的赵忠桥扮圣诞老人近日在北京街头冒着大雪摆摊给女儿筹集医药费，不料被城管看到，辛苦钱交了罚款，上千元饰品也赔了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756213.md#1" target="_blank">一员工在总部跳楼 海康威视指其“抑郁自杀”</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e5d6aab0b85e4f8b74eeb052a456b5d0-150x120.jpg" align ="left"></a>大陆监控设备科技公司海康威视发布通报称，12月30日上午，公司总部发生人员坠楼事件。该人员系国际营销中心技术支持部一名员工。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756041.md#1" target="_blank">失踪8个月 朝鲜官员李善权现身劳动党全会</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/5ad03ce551f46e51ca4a8b60c499c791-150x120.jpg" align ="left"></a>韩国媒体报导，已经8个月未公开露面的朝鲜祖国和平统一（简称祖平统）委员长李善权于12月29日现身劳动党全会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank">白宫：若朝鲜试射远程导弹 美将采取行动</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LO3OB-150x120.jpg" align ="left"></a>白宫国家安全顾问罗伯特?奥布赖恩（Robert O’Brien）周日（12月29日）表示，如果朝鲜试射远程导弹或核导弹，美国将感到非常失望，并采取适当行动。他还表示，金正恩可能已经重新考虑了他的“圣诞礼物”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 10:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768961.md#1" target="_blank">广东新生女婴被装袋挂公厕门把手 父母失踪</a><br></h3>1月1日，广东省梅州市一个公厕里，有民众发现厕所的门把手上挂着一袋东西，里面竟装着一个熟睡的小女婴。袋中还有一件成人衣服，但没有任何关于女婴信息的字条。经检查，女婴没有任何异常，身体也无畸形情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768811.md#1" target="_blank">因手机被没收 西安高中生将老师杀害</a><br></h3>1月2日，陕西省西安市第66中学发生一起刑事案件，该校女教师周某娟被高三学生李某伤害致死。据了解，李某因在晚自习期间玩手机，被值班老师金某发现并予以没收。李某两次索要手机无果，在第三次进到办公室后，将另一名老师周某娟伤害致死，之后李某翻出学校大门逃离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11768659.md#1" target="_blank">每日三退声明精选（2020/01/04）</a><br></h3>这里是被中共统治的中国。这个党告诉世人，他是真理的惟一标准，他是中国的救星，人民的领导者...... 但是他不是伟大的上帝，而是一个以一个个谎言荼毒像你一像天真可爱的孩子的骗子，以一场场血腥暴力摧毁每一个中国人的生命的匪帮。 孩子，对不起，我们没能让你迁离这片多灾多难的土地，没能让你在理想的环境下生活。我们十多年前也没看清中共邪恶的一面，加入了中共党团队，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
 
 据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
@@ -34,6 +35,5 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11760571.md#1" target="_blank">学者：反渗透法照妖镜 大师链撤离台湾</a><br></h3>针对反渗透法于12月31日通过当天，被质疑是红媒平台的大师链立刻宣布撤出台湾，台湾战略模拟学会研究员何澄辉1日表示，反渗透法防御机制刚开始建立就发生效用，已经起到照妖镜功能，虽然这防御机制还不完善，但方向是对的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11759620.md#1" target="_blank">中央美院教授被举报性骚扰多名女生</a><br></h3>近日，多位中央美术学院的女学生通过自媒体爆料，她们遭到该校教授姚舜熙的长期性骚扰。但该校经过长达半年的调查，至今未作出公开回应，只是对姚进行了内部处理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11756555.md#1" target="_blank">山西一在建隧道坍塌 5人死亡1人被困</a><br></h3>12月30日，山西晋城市一施工隧道发生断面塌方，塌方量约200立方米。有6人被困，截止今（31日）早9时11分，证实有5人死亡，1人受困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11754591.md#1" target="_blank">每日三退声明精选（2019/12/29）</a><br></h3>太坑人了，家被拆，无处申冤！为了生活选择工作还被抓进监狱，没有房可住，微薄的退休金还是最低的双轨制，都不敢得病，怕死不起！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
