--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank">大陆收费公路欠债达5.7万亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1024px-Looking_south_bound_down_the_Tullamarine_Freeway_at_Airport_West-150x120.jpg" align ="left"></a>中国拥有世界上最多的收费公路，但所收费用低不上花费速度，数据显示，大陆收费公路所欠债务已达5.7万亿人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1" target="_blank">开豪车入故宫惹议 “露小宝”自称是红三代</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-16-150x120.jpg" align ="left"></a>日前，一组“露小宝开豪车进故宫”的照片引发轩然大波。据悉，其中一名女子叫高露，是中共元老何长工的孙媳妇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802040.md#1" target="_blank">袁斌：中美贸易战，中共认怂的谜底在这里</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-2-600x400-1-1-150x120.jpg" align ="left"></a>中美贸易战开战以来，面对美国强大的关税攻势，嘴硬的中共多次表示奉陪到底，“绝不惧怕贸易战，有信心、有能力应对任何挑战”，中共驻美大使崔天凯甚至扬言：“如果有人想来硬的，我们一定会奉陪，看谁能坚持得更久。”结果呢，现在还不是乖乖的认怂服输，跟美国签了约，虽然目前只是第一阶段的协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801989.md#1" target="_blank">江西现史上罕见夏秋冬连旱 552万人受灾</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801989.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1t-g-150x120.jpg" align ="left"></a>长江中下游中部的江西省，2019年出现了历史罕见的夏秋冬连续旱情，目前仍在持续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801925.md#1" target="_blank">拥抱台湾 捷克海盗党欲扭转总统亲共政策</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001172123582378-150x120.jpg" align ="left"></a>捷克首都布拉格弃北京改与台北结为姐妹市，在幕后主导的海盗党议员克劳斯娃表示，愈来愈多捷克人对中共失去好感，她希望借机扭转总统齐曼的亲共政策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 11:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801522.md#1" target="_blank">“一带一路”企业再爆雷 半年违约60亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801522.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1903161216022190-150x120.jpg" align ="left"></a>安徽省外经建设（集团）有限公司（安徽外经建设）发生5亿元（人民币，下同）中期票据利息违约，这是该公司自去年7月份以来第5次违约，涉及本金共约60亿元。这也是又一个涉及中共“一带一路”的违约企业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801168.md#1" target="_blank">声援中学生集会 王喜以打牌为喻勉励学生</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/190121070536100311-1-150x120.jpg" align ="left"></a>香港“反送中”运动已持续七个多月，一直敢言的艺人王喜，17日到大埔声援以“无惧白色恐怖”为主题的中学生集会。他在受邀发言时以打牌作比，勉励抗争者：“不出它（港共极权）要的牌，不要让它糊牌！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801405.md#1" target="_blank">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔去年录制大陆真人秀《追我吧》猝逝，曾传出该节目的主持人华少当时对观众说“已恢复意识”，遭网友炮轰。17日，华少在微博透露，前一天他连续收到两份匿名快递的包裹，“里面的东西让我非常震惊和害怕”，并表示已向警局报案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800810.md#1" target="_blank">台湾大选反共潮高涨 鼓舞中港人民争自由</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5511-150x120.jpg" align ="left"></a>2020年中华民国总统大选，蔡英文获得压倒性胜利。民调显示，台湾选举受香港反送中事件影响最大。专家说，投票结果表达台湾向中共说不，反共潮高涨捍卫民主自由的意志，也鼓舞香港人、中国大陆人争取自由民主。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801695.md#1" target="_blank">大陆明星饮品下架 天喔国际停牌16个月</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-9-150x120.png" align ="left"></a>天喔国际旗下的多款明星代言饮品目前已在大陆多地下架。天喔国际已停牌16个月，近日在港交所发布了最新的清盘呈请公告，并正在讨论重组事宜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1" target="_blank">高校将推“强基计划” 学者：维持中共统治</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20170825-SULIN-GAOKAO-600x400-150x120.jpg" align ="left"></a>中共教育部日前发文，从今年起取消高校自主招生，而在部分高校试点“强基计划”，选拔培养服务于国家重大战略需求的人才。评论表示，在美国对中共进行高科技封锁下，中共试图实施强基计划来解决困境，维持中共统治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801575.md#1" target="_blank">中美协议对照美方首次要价 五大差异在这里</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3a55009168a7966930881578a61aa6a9-150x120.jpg" align ="left"></a>等了近18个月，美中终于达成第一阶段协议。对照两年前美国在第一次谈判时提出的要价清单，两者至少有五大差异。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801598.md#1" target="_blank">贸易协议签署后 官媒热炒空姐炫富开车游故宫</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801598.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/851e9ea68d96f43e3450e6f7c72814b3-150x120.jpg" align ="left"></a>美中签署了第一阶段贸易协议后，一则“空姐炫富开豪车游故宫”的消息被中共多家官媒报导后迅速刷屏，几乎取代了中美贸易协议的重大消息而成为网络热点话题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1" target="_blank">美报告曝光：中共企图影响全球媒体新招术</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1904050650032378-150x120.jpg" align ="left"></a>多年以来，中国（中共）通过境外媒体传播其故事和宣传。“自由之家”发布报告称，自2017年以来，这些中共的影响力运动已采用了新策略来加速进行，以及其它国家如何反击中共的媒体渗透和霸凌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801573.md#1" target="_blank">周晓辉：川普下紧箍咒 中南海解除只有一条路</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801573.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-2-600x400-1-150x120.jpg" align ="left"></a>目前中南海签署第一阶段协议后，不想遭受灭顶之灾，惟有一条路是顺应天意和历史大势，遵守协议内容，推动经济政治改革，才可解除戴在头上的紧箍咒，也方有一线生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:08 AM							</td></tr>
@@ -14,27 +26,8 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801220.md#1" target="_blank">吴花燕病亡 民政部募捐黑幕：4.9亿买理财</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8ad5fdd9ed9d103f27d08838c8dbd987-150x120.jpg" align ="left"></a>贵州24岁的贫困女大学生吴花燕在贫病交逼之中去世，中共民政部旗下儿慈会被揭一直利用她这样的重症儿童的名义募集大笔捐款，但捐款至死都没有给被救助者，而将4.9亿救助款用于投资理财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800353.md#1" target="_blank">中国人口首破14亿 出生率70年来最低</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800353.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/Fotolia_97959669_Subscription_L-150x120.jpg" align ="left"></a>中共官方最新统计显示，2019年的大陆人口已增至14亿零5万人，首破14亿人；男性人口较女性多出约3049万人，性别失衡明显。同时在人口自然成长率、出生率方面再下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796616.md#1" target="_blank">台作家：自由之火终将从香港台湾传到大陆</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/926f92dc5bd020141ff122984fcc5cf5-150x120.jpg" align ="left"></a>“一开始放鞭炮，零星的几个，我还不知道为什么？后来多起来了……”台湾胜选之夜，台湾作家夏祷赞叹台湾人有骨气。这次大选，台湾守住了自由民主体制、不向中共统战投降，被认为意义重大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799356.md#1" target="_blank">【翻墙必看】美中贸易协议签署意味着什么</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799356.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/b12e08d7a43c5b2ddc889c507cb529aa-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.美国逼中共 贸易协议北京大让步内幕
-在经历两年的博弈和谈判之后，中美终于达成协议。消息传回，大陆网络沸腾了，以五毛为主的网络水军大骂协议是“跪下”签订的“卖国”条约，“刘鹤是李鸿章第二”云云。不过，大陆企业和一般民众以及全世界对中美能够停火，都感觉松了一口气。
-
-2.【独家】人民日报前副总编遭情夫之子举报.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 9:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799428.md#1" target="_blank">林郑拒道歉 出席立法会会议惹众怒</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3313bb5f0284438131816670d8701cdb-150x120.jpg" align ="left"></a>1月16日香港立法会内进行了行政长官答问会，林郑坚称“抗争者是暴徒，香港没有警暴”，并强调香港是“一国原则下的两制”，甚至指香港年轻人担心的事情是他们自己造成的。林郑在立法会内遭众人怒骂，并被追问担不担心她自己会下地狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 9:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800551.md#1" target="_blank">过年前李文足探视 王全璋状态有好转</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1711011026371770-150x120.jpg" align ="left"></a>中国传统新年前，1月16日，李文足再次到山东临沂监狱探视王全璋律师。李文足说，此次王全璋的状态比上一次要好一些，让她心里也感觉轻松一些。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800738.md#1" target="_blank">肺炎疫情疑被隐瞒 武汉网民指患者多到躺地上</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine3_1586627872-150x120.jpg" align ="left"></a>湖北武汉去年底起爆发不明原因肺炎，至今已两人死亡，日本、泰国也出现感染病例，但中国境内至今却只有武汉公布疫情。当地网友近日表示，医院人多到躺在走廊地上，医疗资源明显不足。
-
-正值传统中国新年节前夕，中国返乡潮已进入第7天，庞大的人潮往返让民众担忧将加速疫情扩散。不少人在网上发文质疑“只出国不出省，是个爱国病毒”、“病毒都传染到泰国和日本去了，大陆上却不传.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799726.md#1" target="_blank">面临诸多灰犀牛 大陆多省下调今年GDP目标</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg" align ="left"></a>大陆多个省市近来陆续公布了今年GDP增长目标，相比去年，这些省市基本都下调了GDP增幅，显示大陆地方当局面对诸多灰犀牛，对今年的经济增长信心不强。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800674.md#1" target="_blank">网友爆光上海人社局12333热线压榨员工</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800674.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-6-150x120.jpg" align ="left"></a>上海市人力资源和社会保障局有一条热线电话，名叫“12333知询通”，主要是为上海民众提供劳动保障法律法规咨询、政策业务咨询，受理劳动保障监察举报、政风行风投诉、提供社会保障账户查询、劳动保险账户查询、劳动保障办事指南、电子邮件处理、电话办事、电话调查、舆情反馈、英语服务等多元化服务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800646.md#1" target="_blank">武汉肺炎致2死 香港共发现81宗疑似个案</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800646.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bded1d7c8eb1b39b5b255fd1a87288fa-150x120.jpg" align ="left"></a>武汉的新型冠状病毒引起的肺炎，再增1例死亡。香港截止到今天（17日）共发现81宗疑似武汉新型冠状病毒个案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800628.md#1" target="_blank">美参院通过“印太合作法案”对抗中共霸权</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/8591139a8e8fe654e2491496e32fc3cd-150x120.jpg" align ="left"></a>美国参议院一致通过“2019年印太合作法案”，对抗中共的地区霸权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800041.md#1" target="_blank">伊朗人不踩美国和以色列国旗 网民对比中国</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1760730-150x120.jpg" align ="left"></a>在伊朗政府承认“误击”乌克兰航空公司的客机之后，大批民众走上街头抗议。近日有画面显示，伊朗大多数民众避免踩踏地面上漆画的美国和以色列国旗。对此，美国总统川普（特朗普）称赞“大有进步”，另有网民表示，相较于中共独裁政权，伊朗对民众的洗脑显然略逊一筹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800324.md#1" target="_blank">赵紫阳忌日亲友旧部拜祭 墓园现场戒备森严</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/9671B9A1-F849-4420-A98B-DA15BBD2441A_w1023_r1_s-150x120.jpg" align ="left"></a>今天（1月17日）是前中共总书记赵紫阳逝世15周年，亦是赵紫阳与妻子梁伯琪自去年10月安葬在北京昌平区民间公墓天寿园后，其家属及旧部首次在忌日到墓园拜祭，天寿园附近守卫森严。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799968.md#1" target="_blank">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-15-korea-seoul-group-practice_03-150x120.jpg" align ="left"></a>为何在韩国，炼功人可以堂堂正正地进入市政府大楼，阅读修炼书籍，交流修炼体会？反观大陆，人们非但不能自由地实践信仰，反而因为做好人而被非法监禁............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801540.md#1" target="_blank">制片人爆大陆限薪令：头部演员片酬降九成</a><br></h3>身兼制片人和编剧的白一骢，日前受访时谈及大陆演员薪酬的变化。他透露：“头部演员的片酬降了九成，一般艺人则比巅峰时期至少降了两三倍。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798865.md#1" target="_blank">甘肃庆阳市委党校副校长李光照被举报</a><br></h3>甘肃省庆阳市委党校副校长李光照极尽恶毒诬蔑法轮功，其在宁县任政法委书记期间，指挥当地公检法司非法骚扰、关押、劳教，办洗脑班迫害法轮功学员，现被大陆民众举报到海外明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801511.md#1" target="_blank">台专家完成武汉疫情查访 揭两起家庭群聚感染</a><br></h3>台湾专家完成中国武汉肺炎疫情查访，专家今天说，武汉有3成病例无海鲜市场接触史，临床初判有潜在疾病、肥胖者是重症高风险群。因主要感染源不明，疾管署提升武汉旅游警示。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 4:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800435.md#1" target="_blank">中共纪检系统官员向大老虎泄密 并为其抹案</a><br></h3>日前，中共官媒专题片披露了吴文广、孟弘毅等纪检系统“内鬼”的贪污细节。两人分别与已落马的“大老虎”虞海燕案、王珉案有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800373.md#1" target="_blank">一周喝两次珍珠奶茶 河南男童患肠梗阻</a><br></h3>近日，河南新乡一名13岁男童因腹痛难忍被送入急诊，经检查是肠梗阻现象。医生了解到，男童病发前一周内喝过两次珍珠奶茶，并且其没有充分咀嚼珍珠。经手术，男童肠道里的异物三天后排出。医生建议，家长应少给孩子喝奶茶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
